unpackaged/main/default/objects/Backup_Facility__c/Backup_Facility__c.object-meta.xml
<CustomObject>
    <label>Backup Facility</label>
    <nameField>
        <displayFormat>BU-{000000}</displayFormat>
        <label>Backup Facility Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Backup Facilities</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>