unpackaged/main/default/objects/Backup_Facility__c/fields/Backup_Facility__c.field-meta.xml
<CustomField>
    <fullName>Backup_Facility__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Backup Facility</label>
    <referenceTo>ServiceTerritory</referenceTo>
    <relationshipLabel>Alternate Backups</relationshipLabel>
    <relationshipName>Backup_Facilities2</relationshipName>
    <type>Lookup</type>
</CustomField>