unpackaged/main/default/objects/Backup_Facility__c/fields/Backup_Level__c.field-meta.xml
<CustomField>
    <fullName>Backup_Level__c</fullName>
    <label>Backup Level</label>
    <precision>3</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>