unpackaged/main/default/objects/Backup_Facility__c/fields/Backup_List_Name__c.field-meta.xml
<CustomField>
    <fullName>Backup_List_Name__c</fullName>
    <formula>TEXT(Backup_Level__c) &amp; &quot; - &quot; &amp;  Backup_Facility__r.Name &amp; if(Backup_Facility__r.IsLandline__c = TRUE,&quot;(LL)&quot;,&quot;&quot;)</formula>
    <label>Backup List Name</label>
    <type>Text</type>
</CustomField>