unpackaged/main/default/objects/Backup_Facility__c/fields/Primary_Facility__c.field-meta.xml
<CustomField>
    <fullName>Primary_Facility__c</fullName>
    <label>Primary Facility</label>
    <referenceTo>ServiceTerritory</referenceTo>
    <relationshipLabel>Backup Facilities</relationshipLabel>
    <relationshipName>Backup_Facilities1</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>