unpackaged/main/default/objects/Backup_Facility__c/listViews/Backups_by_Facility.listView-meta.xml
<ListView>
    <fullName>Backups_by_Facility</fullName>
    <columns>NAME</columns>
    <columns>Primary_Facility__c</columns>
    <columns>Backup_Facility__c</columns>
    <columns>Backup_Level__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Backup_Facility__c</field>
        <operation>contains</operation>
        <value>291000</value>
    </filters>
    <label>Backups by Facility</label>
    <sharedTo>
        <allInternalUsers />
    </sharedTo>
</ListView>